--- a/web/index.html
+++ b/web/index.html
@@ -23,8 +23,8 @@
 		CHS Mapping
 	</div>
 	<div class="sidebar">
-		<div class="map-item" onclick="mapGeoJSON('C16001002',5,'YlOrRd','quantiles');">Speaks only English</div>
-		<div class="map-item" onclick="mapGeoJSON('C16001003',5,'PuBuGn','quantiles');">Speaks Spanish</div>
+		<div class="map-item" onclick="mapGeoJSON({field:'C16001002'});">Speaks only English</div>
+		<div class="map-item" onclick="mapGeoJSON({field:'C16001003'});">Speaks Spanish</div>
 	</div>
 	<div class="content">
 		<div id="map"></div>
