--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,10 @@
 	<!-- style sheets -->
 	<link rel="stylesheet" href="css/style.css">
 
+	<!-- fonts -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
 	<!-- leaflet -->
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
@@ -19,14 +23,24 @@
 
 	<!-- papa parse for csv's -->
 	<script src="js/papaparse.min.js"></script>
+
+    <!-- ... -->
+    <link href="css/font-awesome.css" rel="stylesheet" />
+    <link href="css/selectivity.css" rel="stylesheet" />
+    <!-- ... -->
+    <script src="js/selectivity-jquery.min.js"></script>
+    <script src="js/selectivity.js"></script>
+    <!-- <script src="js/all.js"></script> -->
+    <!-- ... -->
+
+
 </head>
 <body>
 
 	<div class="header">
-		CHS Mapping
+		Community Health Worker Outreach Initiative
 	</div>
 	<div class="sidebar">
-
 	</div>
 	<div class="content">
 		<div id="map"></div>
