--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
     <script src="js/selectivity.js"></script>
     <!-- <script src="js/all.js"></script> -->
     <!-- ... -->
-
+	<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
 </head>
 <body>
