dashboard to the side

--- a/web/index.html
+++ b/web/index.html
@@ -45,6 +45,9 @@
 	<div class="content">
 		<div id="map"></div>
 	</div>
+	<div class="dashboard">
+		
+	</div>
 	<div class="footer">
 		© UCLA Center for Neighborhood Knowledge
 	</div>
