search by block code

--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,9 @@
     <!-- ... -->
 	<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
+	<!-- plotly -->
+	<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+
 </head>
 <body>
 
@@ -45,9 +48,9 @@
 	<div class="content">
 		<div id="map"></div>
 	</div>
-	<div class="dashboard">
-		
-	</div>
+	<div class="dashboard"></div>
+	<!-- <div id="undermap" class="undermap"></div> -->
+	<div id="abovemap" class="abovemap"></div>
 	<div class="footer">
 		© UCLA Center for Neighborhood Knowledge
 	</div>
