waffle charts, transparency slider

--- a/web/index.html
+++ b/web/index.html
@@ -34,8 +34,13 @@
     <!-- ... -->
 	<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
-	<!-- plotly -->
-	<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+
+	<!--Plugin CSS file with desired skin-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css"/>
+        
+    <!--Plugin JavaScript file-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
+
 
 </head>
 <body>
@@ -43,14 +48,14 @@
 	<div class="header">
 		Community Health Worker Outreach Initiative
 	</div>
-	<div class="sidebar">
-	</div>
+	<div class="sidebar"></div>
+	<div class="legend"></div>
 	<div class="content">
 		<div id="map"></div>
 	</div>
 	<div class="dashboard"></div>
 	<!-- <div id="undermap" class="undermap"></div> -->
-	<div id="abovemap" class="abovemap"></div>
+	<!-- <div id="abovemap" class="abovemap"></div> -->
 	<div class="footer">
 		© UCLA Center for Neighborhood Knowledge
 	</div>
