--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,9 @@
 	<!-- Apex Charts -->
 	<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
+	<!-- D3 -->
+	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
 	<!-- slider -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
