--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,9 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
 	<script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js" charset="utf-8"></script>
 
+	<!-- leaflet print -->
+	<script src="js/external/leaflet.browser.print.min.js"></script>
+
 	<!-- jquery -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
@@ -83,11 +86,11 @@
 		Community Health Worker Outreach Initiative 
 	</div>
 	<div class="sidebar"></div>
-	<div class="legend"></div>
+	<div class="legend" leaflet-browser-print-pages></div>
 	<div class="content">
 		<div id="map"><br><br><br><br><i class="fa fa-location-arrow fa-spin" aria-hidden="true"></i><br>...loading map...</div>
 	</div>
-	<div class="dashboard">
+	<div class="dashboard" leaflet-browser-print-pages>
 		<div id="toggler" onclick="toggleDashboard()" style="display: none;cursor:pointer"><i class="fa fa-arrows-h" aria-hidden="true"></i></div>
 		<div id="charts"></div>
 	</div>
