--- a/web/index.html
+++ b/web/index.html
@@ -79,6 +79,16 @@
 			return new L.TopoJSON(data, options);
 		};
 	</script>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-34YX8KWMKK"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-34YX8KWMKK');
+	</script>
 </head>
 <body>
 
