gender age added

--- a/web/index.html
+++ b/web/index.html
@@ -95,10 +95,12 @@
 	<div class="header">
 		Community Health Worker Outreach Initiative 
 	</div>
-	<div class="sidebar"></div>
+	<div class="sidebar">
+		
+	</div>
 	<div class="legend" leaflet-browser-print-pages></div>
 	<div class="content">
-		<div id="map"><br><br><br><br><i class="fa fa-location-arrow fa-spin" aria-hidden="true"></i><br>...loading map...</div>
+		<div id="map"><br><br><br><br><i class="fa fa-location-arrow fa-spin" aria-hidden="true"></i><br>...loading map...</div><div id="toggler2" onclick="toggleTOC()" style="display: none;cursor:pointer"><i class="fa fa-arrows-h" aria-hidden="true"></i></div>
 	</div>
 	<div class="dashboard" leaflet-browser-print-pages>
 		<div id="toggler" onclick="toggleDashboard()" style="display: none;cursor:pointer"><i class="fa fa-arrows-h" aria-hidden="true"></i></div>
