--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CHS Mapping</title>
+	<title>CHS Mapping </title>
 	<meta charset="utf-8" />
 
 	<!-- style sheets -->
@@ -108,9 +108,11 @@
 	</div>
 	<!-- <div id="undermap" class="undermap"></div> -->
 	<!-- <div id="abovemap" class="abovemap"></div> -->
-	<!-- <div class="footer">
-		© UCLA Center for Neighborhood Knowledge
-	</div> -->
+	<div class="footer">
+		<a href="https://chc-inc.org/" target="_blank"><img src="images/CHC.jpg" height="30"></a>
+		<a href="http://publichealth.lacounty.gov/" target="_blank"><img src="images/PublicHealthLogoHE.jpg" height="40"></a>
+
+	</div>
 
 	<!-- project javascript -->
 	<script src="js/globals.js"></script>
